# switching

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
data/historical_events/: activist_13d.csv  ai_pivot.csv  contract_win.csv  crypto_treasury.csv  earnings_surprise.csv  guidance_raise.csv  uk_director_dealing.csv
docs/: SQL_SCHEMA.md  release-it.mini.md
scripts/: backup.ps1  bench_ticker_resolver.py  build_test_fixture.py  check_t212_tickers.py  deploy.ps1  deploy.sh  edgar_8k_sample.py  migrate_to_sqlite.py  reddit_backtest.py  reddit_fetch_comments.py  reddit_find_callers.py  reddit_momentum_backtest.py  reddit_profile_user.py  refresh_t212_docs.py
src/switching/: __init__.py  ai_filter.py  backtest.py  broker_alpaca.py  broker_trading212.py  cli.py  detection_funnel.py  exit_tracker.py  market_calendar.py  movers.py  notifications.py  options_model.py  paper_trader.py  pricing.py  registry.py  reporter.py  rns_archive.py  signal.py  skipped_tracker.py  storage.py  trade_memory.py  web.py  (+1 more)
tests/: test_ai_filter.py  test_backtest.py  test_benzinga.py  test_broker_trading212.py  test_detection_funnel.py  test_exit_tracker.py  test_market_calendar.py  test_market_calendar_lse.py  test_movers.py  test_notifications.py  test_options_model.py  test_paper_trader.py  test_pricing.py  test_registry.py  test_rns_archive.py  test_signal.py  test_skipped_tracker.py  test_storage.py  test_storage_compat.py  test_trade_memory.py  test_web.py  test_weekly_report.py
(+56 files in other folders)
