[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "switching"
version = "0.1.0"
description = "Pluggable trend-detection framework: scan public data for corporate-narrative pivots (AI-pivot, crypto-treasury, activist 13D, buybacks, ...) and correlate with stock reaction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "feedparser>=6.0",
    "yfinance>=0.2.40",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
switching = "switching.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
switching = ["py.typed", "data/historical_events/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
